Add message endpoints
